ingress-nginx/ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: busybox-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: abc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: busybox-web
          servicePort: 80
      - path: /web
        backend:
          serviceName: nginx
          servicePort: 80
